--- a/package.json
+++ b/package.json
@@ -6,17 +6,26 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "@prisma/client": "^4.0.0",
+    "lodash.debounce": "^4.0.8",
     "next": "latest",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-number-format": "^4.9.3",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "prisma": "^4.0.0",
     "tailwindcss": "^3.1.2",
+    "ts-node": "^10.8.2",
     "typescript": "4.7.2"
   }
 }
