--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@prisma/client": "^4.0.0",
     "lodash.debounce": "^4.0.8",
     "next": "latest",
+    "next-seo": "^5.4.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-number-format": "^4.9.3",
